--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"dev": "next dev --turbopack",
 		"build": "next build",
 		"start": "next start",
-		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
+		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --rule 'prettier/prettier: off'"
 	},
 	"dependencies": {
 		"@nextui-org/button": "2.2.8",
