--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "@prisma/client": "^6.2.1",
   "@react-aria/ssr": "3.9.7",
   "@react-aria/visually-hidden": "3.8.18",
+  "bcrypt": "^5.1.1",
   "clsx": "2.1.1",
   "framer-motion": "11.13.1",
   "intl-messageformat": "^10.5.0",
