--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "dev": "next dev --turbopack",
   "build": "next build",
   "start": "next start",
-  "lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --rule 'prettier/prettier: off'"
+  "lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --rule 'prettier/prettier: off'",
+  "seed": "tsc --noEmit && npx tsx prisma/seed.ts"
+ },
+ "prisma": {
+  "seed": "npm run seed"
  },
  "dependencies": {
   "@heroui/button": "2.2.9",
@@ -30,11 +34,14 @@
   "next": "15.0.4",
   "next-themes": "^0.4.4",
   "react": "18.3.1",
-  "react-dom": "18.3.1"
+  "react-dom": "18.3.1",
+  "ts-node": "^10.9.2"
  },
  "devDependencies": {
+  "@faker-js/faker": "^9.4.0",
   "@next/eslint-plugin-next": "15.0.4",
   "@react-types/shared": "3.25.0",
+  "@types/bcrypt": "^5.0.2",
   "@types/node": "20.5.7",
   "@types/react": "18.3.3",
   "@types/react-dom": "18.3.0",
@@ -56,6 +63,7 @@
   "prisma": "^6.2.1",
   "tailwind-variants": "0.1.20",
   "tailwindcss": "3.4.16",
-  "typescript": "5.6.3"
+  "tsx": "^4.19.2",
+  "typescript": "^5.7.3"
  }
 }
