--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "@heroui/switch": "2.2.8",
   "@heroui/system": "2.4.6",
   "@heroui/theme": "2.4.5",
+  "@next-auth/prisma-adapter": "^1.0.7",
   "@prisma/client": "^6.2.1",
   "@react-aria/ssr": "3.9.7",
   "@react-aria/visually-hidden": "3.8.18",
@@ -33,6 +34,7 @@
   "framer-motion": "11.13.1",
   "intl-messageformat": "^10.5.0",
   "next": "15.0.4",
+  "next-auth": "^4.24.11",
   "next-themes": "^0.4.4",
   "react": "18.3.1",
   "react-dom": "18.3.1",
