--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
   "next-themes": "^0.4.4",
   "react": "18.3.1",
   "react-dom": "18.3.1",
-  "ts-node": "^10.9.2"
+  "ts-node": "^10.9.2",
+  "zod": "^3.24.1"
  },
  "devDependencies": {
   "@faker-js/faker": "^9.4.0",
