--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "react": "18.3.1",
   "react-dom": "18.3.1",
   "ts-node": "^10.9.2",
+  "use-debounce": "^10.0.4",
   "zod": "^3.24.1"
  },
  "devDependencies": {
