--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "@heroui/switch": "2.2.8",
   "@heroui/system": "2.4.6",
   "@heroui/theme": "2.4.5",
+  "@internationalized/date": "^3.7.0",
   "@next-auth/prisma-adapter": "^1.0.7",
   "@prisma/client": "^6.2.1",
   "@react-aria/ssr": "3.9.7",
