--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "build": "next build",
   "start": "next start",
   "lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --rule 'prettier/prettier: off'",
-  "seed": "npx tsx prisma/seed.ts"
+  "seed": "npx tsx prisma/seed.ts",
+  "postinstall": "prisma generate"
  },
  "prisma": {
   "seed": "npm run seed"
