--- a/package.json
+++ b/package.json
@@ -15,17 +15,22 @@
  },
  "dependencies": {
   "@heroicons/react": "^2.2.0",
+  "@heroui/alert": "^2.2.13",
   "@heroui/button": "2.2.9",
   "@heroui/code": "2.2.6",
+  "@heroui/date-picker": "^2.3.13",
   "@heroui/input": "2.4.8",
   "@heroui/kbd": "2.2.6",
   "@heroui/link": "2.2.7",
   "@heroui/listbox": "2.3.9",
+  "@heroui/modal": "^2.2.11",
   "@heroui/navbar": "2.2.8",
   "@heroui/react": "^2.6.14",
+  "@heroui/select": "^2.4.13",
   "@heroui/snippet": "2.2.10",
   "@heroui/switch": "2.2.8",
-  "@heroui/system": "2.4.6",
+  "@heroui/system": "^2.4.10",
+  "@heroui/tabs": "^2.2.11",
   "@heroui/theme": "2.4.5",
   "@internationalized/date": "^3.7.0",
   "@next-auth/prisma-adapter": "^1.0.7",
