--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "@heroui/switch": "2.2.8",
   "@heroui/system": "^2.4.10",
   "@heroui/tabs": "^2.2.11",
-  "@heroui/theme": "2.4.5",
+  "@heroui/theme": "^2.4.9",
   "@internationalized/date": "^3.7.0",
   "@next-auth/prisma-adapter": "^1.0.7",
   "@prisma/client": "^6.2.1",
