--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,12 @@
 {
-    "version": 2,
-    "rewrites": [
+  "version": 2,
+  "builds": [
+      {
+          "src": "package.json",
+          "use": "@vercel/next"
+      }
+  ],
+  "rewrites": [
       { "source": "/(.*)", "destination": "/" }
-    ]
-  }
-  
+  ]
+}
