Preserve API & event routes in Vercel rewrites

--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,11 @@
       }
   ],
   "rewrites": [
-      { "source": "/(.*)", "destination": "/" }
+    { "source": "/api/auth/(.*)", "destination": "/api/auth/$1" },
+    { "source": "/api/(.*)", "destination": "/api/$1" },
+    { "source": "/events/(.*)", "destination": "/events/$1" },
+    { "source": "/profile", "destination": "/profile" },
+    { "source": "/dashboard/(.*)", "destination": "/dashboard/$1" },
+    { "source": "/(.*)", "destination": "/" }
   ]
 }
